@@ -15,7 +15,7 @@
 	           alt="CVS integration"></a>
 	</p>
 	<p>
-	    The latest version of codestriker (1.6.0) can be obtained from
+	    The latest version of codestriker (1.6.1) can be obtained from
    <A HREF="http://sourceforge.net/project/showfiles.php?group_id=41136">here</A>.
 	</p>
 	<p>
@@ -27,8 +27,30 @@
 	    Codestriker is a perl CGI script which is used for
 	    performing code reviews in a collaborative fashion as
 	    opposed to sending patches and comments using unstructured
-	    emails.
+	    emails.  
+	    </p>
+	    <p>
+	    An example Codestriker topic can be seen from
+	    <A
+ 	    HREF="http://codestriker.sourceforge.net/cgi-bin/codestriker.pl?topic=859818&action=view">here</A>.
+	    </p>
+	    
+	    <p>
+	    You can also create your own topic, by going to the
+	    following URL: <A
+	    HREF="http://codestriker.sourceforge.net/cgi-bin/codestriker.pl?action=create">http://codestriker.sourceforge.net/cgi-bin/codestriker.pl?action=create</A>.
+	    </p>
+
+	    <p>
+	    Each topic is given a random unique id, and the
+	    search/list topics functionality in this deployment is
+	    disabled, to support public use and to give some form of
+	    anonymity.  So go ahead and give it a go!  Feedback is
+	    most welcome.  Contact details are at the bottom of this
+	    page.
 	</p>
+
+	<h2>Features</h2>
 	<p>
 	    Authors create code review topics, where the nominated
 	    reviewers will be automatically notified by email.
@@ -84,6 +106,14 @@
 	<p>
 	    This example will show how a new topic is created, how it
 	    is viewed, and how new comments can be submitted.
+	    <FONT COLOR="red">Warning: the screenshots below are a
+	    little outdated, but the concepts haven't changed that
+	    much.</FONT>  As mentioned above, you can see an existing
+	    review from <A
+	    HREF="http://codestriker.sourceforge.net/cgi-bin/codestriker.pl?topic=859818&action=view">here</A>,
+	    or you can create your own topic, by going to the
+	    following URL: <A
+	    HREF="http://codestriker.sourceforge.net/cgi-bin/codestriker.pl?action=create">http://codestriker.sourceforge.net/cgi-bin/codestriker.pl?action=create</A>.
 	</p>
 	<h3>Creating a new topic</h3>
 	<p>
@@ -288,7 +318,7 @@
 	<h2>Download</h2>
 	<p>
 	    The latest version of codestriker can be obtained from
-   <A HREF="http://sourceforge.net/project/showfiles.php?group_id=41136&release_id=94165">here</A>.
+   <A HREF="http://sourceforge.net/project/showfiles.php?group_id=41136">here</A>.
 	</p>
 	<p>
 	    Codestriker sourceforge project information can be found from
